Docs: Update Outreachy general funding to reflect current policies
Outreachy no longer provides all internship funding for open science
communities. Unfortunately, our grants supporting Outreachy open science
internships have expired, and we haven't received any new open science
grants.

Outreachy's finances are currently quite tight, so we may not be able to
fund Outreachy interns with humanitarian open source communities either.
Humanitarian community coordinators should reach out to organizers, and
Outreachy will review each community's funding request on a case-by-case
basis.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -42,11 +42,9 @@ Community Guide | Outreachy Documentation
 	</li>
 	<li><a href='#intern-funding'>Intern Funding</a>
 		<ul>
-			<li><a href='#intern-funding'>Finding sponsors</a></li>
+			<li><a href='#finding-sponsors'>Finding sponsors</a></li>
 			<li><a href="#outreachy-general-fund">Outreachy general fund</a>
 				<ul>
-					<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
-					<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
 					<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
 					<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
 				</ul>
@@ -311,7 +309,7 @@ Community Guide | Outreachy Documentation
 
 <p>Funding for interns may come from a number of different sources. Communities are welcome to apply to participate if their sponsorship is not confirmed yet. Sponsorship information can be updated at any time until the intern selection deadline.</p>
 
-<h3 id='intern-funding'><a href='#intern-funding'>3.1 Finding sponsors</a></h3>
+<h3 id='finding-sponsors'><a href='#finding-sponsors'>3.1 Finding sponsors</a></h3>
 
 <p>FOSS communities often fund Outreachy interns directly from their own community funds, or by using funds from the foundation or non-profit who is their fiscal sponsor.</p>
 
@@ -320,73 +318,23 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<p><a href='#toc'><u>↑ table of contents</u></a></p>
-<hr>
-
-<h3 id='outreachy-general-fund'><a href='#outreachy-general-fund'>3.3 Outreachy General fund</a></h3>
-
-<p>Communities can apply to the Outreachy general fund to sponsor interns. There are two ways to apply for Outreachy general funding:</p>
-
-<ol>
-	<li>Fully funding all interns from the Outreachy general fund</li>
-	<li>Funding some interns from the Outreachy general fund</li>
-</ol>
-
-<p><b>Humanitarian open source communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
-
-<p><b>Open science communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
-
-<p><b>Other communities</b> must secure their own funding for at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
-
-<h3 id='funding-during-cfp'><a href='#funding-during-cfp'>3.3.1 Outreachy general fund: All intern funding</a></h3>
-
-<p>Open science and humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern.</p>
-
-<p>Communities that are not humanitarian focused and not focused on open science are not eligible for this option.</p>
-
-<h3 id='humanitarian-funding'><a href='#humanitarian-funding'>3.3.2 Humanitarian funding: All intern funding</a></h3>
-
-<p>To be eligible for intern funding, a humanitarian open source community must be:</p>
-
-<ul>
-	<li><b>open source</b>: your project's source code and creative works must be published under an open source license</li>
-
-	<li><b>humanitarian focused</b>: your project should tackle a humanitarian issue</li>
-
-	<li><b>community</b>: your project should have at least 2-3 people who make regular open source contributions to your project</li>
-</ul>
-
-<h3 id='open-science-funding'><a href='#open-science-funding'>3.3.3 Open Science funding: All intern funding</a></h3>
-
-<h4 id='czi-funding'>Chan Zuckerberg Initiative funding</h4>
-
-<p>Outreachy is pleased to work with <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> to provide funding for open science interns. Please see our <a href="#community-types-open-science-projects">guidelines for open science communities</a>.</p>
-
-<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.4 Outreachy general fund: Additional intern funding</a></h3>
-
-<p>As explained in the sections above, communities must find their own funding, or apply for funding from the Outreachy general fund. Once funding for one intern is secured, communities will be approved to participate in Outreachy.</p>
+<h3 id='outreachy-general-fund'><a href='#outreachy-general-fund'>3.2 Outreachy General fund</a></h3>
 
 <p>During the intern selection process, some communities may find they have more strong applicants than they have funding for. In that case, communities can apply to the Outreachy general fund for additional intern funding.</p>
 
-<p>All types of open source communities (humanitarian, open science, and other types) are welcome to apply for additional intern funding.</p>
+<p>Any open source community is welcome to apply for additional intern funding.</p>
 
 <p>During the intern selection process, communities can request additional interns be sponsored by the Outreachy general fund. Communities can request that an intern be funded by the Outreachy general fund through the Outreachy website. When a mentor selects an intern, the community coordinator can set the funding source to the Outreachy general fund.</p>
 
 <p>After the intern selection deadline, Outreachy will review general funding requests across all communities. We will determine which ones we have budget to sponsor. Decisions will be communicated before the intern announcement date.</p>
 
-<p><a href='#toc'><u>↑ table of contents</u></a></p>
-<hr>
-
-<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.5 How much does the Outreachy general fund sponsor?</a></h3>
+<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.2.1 How much does the Outreachy general fund sponsor?</a></h3>
 
 <p>The sponsorship for each Outreachy intern is ${{ current_round.sponsorship_per_intern|intcomma }} USD.</p>
 
-<p>The Outreachy general fund typically sponsors 10 to 30 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 5 interns per community.</p>
+<p>Outreachy's budget to sponsor interns is very constrained. We expect to fund 1 to 5 interns total per cohort at this time. We encourage communities to reach out to Outreachy organizers to have conversations about internship funding and any possible sponsorship leads they have.</p>
 
-<p><a href='#toc'><u>↑ table of contents</u></a></p>
-<hr>
-
-<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.6 How do you decide who gets Outreachy general funding?</a></h3>
+<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.2.2 How do you decide who gets Outreachy general funding?</a></h3>
 
 <p>The Outreachy organizers review Outreachy general funding requests after the intern selection deadline. We review Outreachy general funding requests across all communities. Then we apply our criteria to determine which communities get funding.</p>
 
