De-emphasize open science Outreachy program activities
With Outreachy's grants to run open science internships not being
renewed, our focus has shifted back to funding internships with
communities that have a strong open source software component.

Outreachy still encourages open science communities to participate, but
Outreachy may not be able to fund open science internships with
communities who cannot provide a sponsorship lead.

The same is true of humanitarian open source communities. In the past,
when Outreachy had larger grants, we could directly fund humanitarian
open source internships. Now that Outreachy funding is more limited, we
may not be able to fund Outreachy internships with humanitarian open
source communities.

Communities should approach Outreachy organizers, and ask us about
funding. We will evaluate communities on a case-by-case basis.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -209,7 +209,7 @@ Community Guide | Outreachy Documentation
 
 <h4>Open source internship projects</h4>
 
-<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source or open science contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
+<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
 
 <h3 id='community-types-open-science-projects'><a href='#community-types-open-science-projects'>2.1.2 Community types: open science projects</a></h3>
 
@@ -225,7 +225,7 @@ Community Guide | Outreachy Documentation
 
 <h4>Open science internship projects</h4>
 
-<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source or open science contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
+<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
 
 <h3 id='community-types-non-profits'><a href='#community-types-non-profits'>2.1.3. Community types: Non-profits</a></h3>
 
@@ -484,9 +484,9 @@ Mentors will be granted read access to applications for their project and will b
 
 <h3 id="number-of-projects"><a href='#number-of-projects'>7.3 Number of projects</a></h3>
 
-<p>Each Outreachy open source / open science community will have a set amount of interns it can fund. However, communities can apply for additional intern funding from the Outreachy general fund. Also, communities may find that one internship project is more popular than another.</p>
+<p>Each Outreachy open source community will have a set amount of interns it can fund. However, communities can apply for additional intern funding from the Outreachy general fund. Also, communities may find that one internship project is more popular than another.</p>
 
-<p>Therefore, it is encouraged for open source / open science communities to list more projects than they have internship funding (or mentors) for. For example, communities that intend to accept 1-2 interns often list 3-5 projects.</p>
+<p>Therefore, it is encouraged for open source communities to list more projects than they have internship funding (or mentors) for. For example, communities that intend to accept 1-2 interns often list 3-5 projects.</p>
 
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
@@ -496,7 +496,7 @@ Mentors will be granted read access to applications for their project and will b
 
 <p>Outreachy mentors need to define a set of newcomer-friendly tasks (called "contribution period tasks"). Applicants will work on these tasks during the contribution period. The contribution period tasks for applicants are different than the work the intern will complete during the internship.</p>
 
-<p>The goal of contribution period tasks is for mentors to determine whether the applicant has the skills to be successful during the internship. Working on contribution period tasks also help applicants get familiar with the mentor and the open source / open science community norms.</p>
+<p>The goal of contribution period tasks is for mentors to determine whether the applicant has the skills to be successful during the internship. Working on contribution period tasks also help applicants get familiar with the mentor and the open source community norms.</p>
 
 <p>In order to be accepted as an intern, applicants need to complete at least one contribution period task.</p>
 
@@ -513,13 +513,13 @@ Mentors will be granted read access to applications for their project and will b
 <p>There are many places to list contribution period tasks for Outreachy applicants to work on.</p>
 
 <ul>
-	<li>open source / open science community issue tracker</li>
-	<li>welcome page on the open source / open science community website or wiki</li>
+	<li>open source community issue tracker</li>
+	<li>welcome page on the open source community website or wiki</li>
 	<li>shared online document</li>
 	<li>kanban board (useful to assign contribution period tasks and sort tasks into categories)</li>
 </ul>
 
-<p>Most open source / open science communities try to tag issues that are designed for newcomers. A 'tag' is a label that links to issues under the same topic. Tagging a group of issues specifically for Outreachy applicants (or all newcomers) ensures they won't try working on an issue that is too complex or not well defined.</p>
+<p>Most open source communities try to tag issues that are designed for newcomers. A 'tag' is a label that links to issues under the same topic. Tagging a group of issues specifically for Outreachy applicants (or all newcomers) ensures they won't try working on an issue that is too complex or not well defined.</p>
 
 <p>Here are some recommended tags for labeling contribution period tasks for Outreachy applicants:</p>
 <ul>
@@ -540,7 +540,7 @@ Mentors will be granted read access to applications for their project and will b
 	<li><b>Programming:</b> update one function to use a newer API, or refactor some code</li>
 	<li><b>Documentation:</b> identify a missing section of documentation and outline what should be in that section</li>
 	<li><b>Translation:</b> translate one paragraph of documentation from English to your native language</li>
-	<li><b>Design:</b> design an example illustration for the open source / open science community website</li>
+	<li><b>Design:</b> design an example illustration for the open source community website</li>
 	<li><b>Accessibility:</b> identify one accessibility bug using Web Content Accessibility Guidelines (WCAG) 2.1 standard levels</li>
 	<li><b>User research:</b> introduce the open source software to a friend, and record their impressions and challenges while trying to complete a task</li>
 </ul>
