Finalize language about Outreachy sponsorship leads.
Include text edited collaboratively by Conservancy leadership.

--- a/home/templates/home/blog/2024-08-14-outreachy-needs-your-help.html
+++ b/home/templates/home/blog/2024-08-14-outreachy-needs-your-help.html
@@ -49,7 +49,7 @@
   <p>
     We are optimistic about facing these challenges together. We believe that we need a collective effort from the whole open source community to improve our chances of overcoming these financial challenges. We want to raise the alarm early and ask for help, so that we aren't forced to make any sudden decisions on our own.
   </p>
-  <h3>Outreachy Funding</h3>
+  <h3 id="funding-loss">Outreachy Funding</h3>
   <p>
     Finding funding for Outreachy has been extremely difficult this year. Funding for Outreachy comes from a variety of sources: open source community funds, non-profits, academic institutions, corporate sponsors, individual donors, and grants. This year, Outreachy donations are down across all sources of funding.
   </p>
