--- a/home/templates/home/blog/2025-01-20-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-20-community-cfp-open.html
@@ -18,6 +18,8 @@
     Outreachy is seeking open source communities to mentor Outreachy interns in the June 2025 cohort.
   </p>
   {% include 'home/snippet/funding_short_description.html' %}
+
+<p>Please share Outreachy's sponsorship information with any organization you think may want to donate: <a href="https://www.outreachy.org/sponsor/">https://www.outreachy.org/sponsor/</a></p>
   <h2>Important dates</h2>
   <p>
     <ul>
