--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,5 +1,11 @@
 {% load humanize %}
-<p>We encourage any open source community to apply to mentor Outreachy interns, and we need your help finding organizations to sponsor Outreachy.</p>
+<p>We encourage any open source community to apply to mentor Outreachy interns.</p>
+
+<p>Outreachy does not require your community to provide internship funding. However, <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/#funding-loss">donations to Outreachy have decreased over the last few years</a>, and we currently have a very limited budget to fund internships each cohort.</p>
+
+<p>We often find that FOSS communities know best what organizations or companies might have funding available. Therefore, we need your help finding additional <a href="https://www.outreachy.org/sponsor/">Outreachy sponsors</a>.</p>
+
+<p>We cannot assure funding for your interns, but we will try.  Your help identifying fundraising leads will be a major factor in the success of this Outreachy internship cohort.</p>
 
 <p><u>Donation amounts</u></p>
 <p>In order to sustain our program, Outreachy needs to receive donations of at least <b>${{ current_round.sponsorship_per_intern|intcomma }} to $10,000 USD per intern</b> we accept. This breaks down to:</p>
@@ -8,18 +14,14 @@
 	<li>$1,000 to $3,000 USD donation towards the Outreachy program activities fund, which covers some of the basic costs of running the Outreachy program, and without which we couldn't run the internship program at all.</li>
 </ul>
 
-<p><u>Your support is vital to Outreachy interns</u></p>
-<p>We encourage organizations to donate additional funds to Outreachy program activities because Outreachy is a labor intensive program and <b>your additional donation helps us retain Outreachy interns in the open source community.</b></p>
+<p><u>Donations to the Outreachy program are vital to support interns</u></p>
 
-<p>Outreachy organizers are highly involved with encouraging your interns to pursue a future in open source. The Outreachy organizers share tips for your interns on how to attend FOSS conferences, encourage your interns to explore careers or academic research in open source, and help them expand their network of open source contracts.</p>
+<p>Outreachy is a labor intensive program. Outreachy organizers are highly involved with interns. Outreachy organizers work closely with your community's mentors to empower your interns to pursue a future in FOSS. The Outreachy organizers share tips for your interns on how to attend FOSS conferences, encourage your interns to explore careers or academic research in open source, and help them expand their network of open source contracts.</p>
 
-<p>Outreachy's deep support of interns, along with your partnership, means <b>80% of past Outreachy interns continue to contribute to open source after their internship</b>.
+<p>Outreachy's deep support of interns, along with your mentoring partnership, means <b>80% of past Outreachy interns continue to contribute to open source after their internship.</b></p>
 
-<p>We highly encourage organizations to provide an additional donation to help Outreachy sustain our deep support of interns, and retain their amazing talent in our open source community.</p>
+<p>Outreachy organizers' deep support of interns would not be possible without funding for Outreachy's core program activities. We highly encourage organizations to donate additional funds to Outreachy program activities because <b>additional donations helps us retain Outreachy interns in the open source community.</b></p>
 
-<p>Learn more about Outreachy sponsorship levels at <a href="https://www.outreachy.org/sponsor/">https://www.outreachy.org/sponsor/</a></p>
+<p><u>We need fundraising collaboration with FOSS communities</u></p>
 
-<p><u>Financial support for some FOSS communities</u></p>
-<p>We understand that some open source communities may not have the funding for an Outreachy intern, and they may not know of organizations that want to sponsor Outreachy. Depending on Outreachy's budget and priorities, we may have some <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/">very limited funds</a> available to fiscally support Outreachy internships with specific open source communities. Whether we can support your community depends on our overall budget and priorities.</p>
-
-<p>Please <a href="{% url 'contact-organizers' %}">contact us</a> to discuss this further.</p>
+<p>We need your community's help to identify and convince organizations to provide donations to help Outreachy sustain our deep support of interns, and retain their amazing talent in our open source community.  Please don't think about this as just finding funding for your interns for this internship cohort. This is about sustaining our program, and we ask for your help with promotion and fundraising leads.</p>
