Incorporate changes to our Sponsor Outreachy page

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -11,7 +11,7 @@ Sponsor Outreachy
 
 <p>Outreachy is supported by our generous donors!
 
-<p>Outreachy is a diversity initiative of the 501(c)(3) non-profit Software Freedom Conservancy. Donations are tax deductible.</p>
+<p>Outreachy is a diversity initiative of the 501(c)(3) non-profit Software Freedom Conservancy. Donations are tax deductible to the extent permitted by law..</p>
 
 <div class="container">
 	<div class="row align-items-center justify-content-center">
@@ -132,21 +132,10 @@ Sponsor Outreachy
 		</div>
 	</div>
 </div>
-<h2 id="why-sponsor-diversity-in-foss">Why sponsor diversity in open source?</h2>
-
-<p>Women are underrepresented in Free and Open Source Software (FOSS) development, even as compared with the number of women studying Computer Science in colleges around the world and with the number of women employed in proprietary software development. While the <a href="http://opensourcesurvey.org/2017/">2017 GitHub survey</a> showed that participation of women in FOSS is still extremely low at 3%, Outreachy has been a major factor in increasing participation of women in communities that participate. For example, <a href="https://blog.bitergia.com/2016/10/11/gender-diversity-analysis-of-the-linux-kernel-technical-contributions/">the percentage of women Linux kernel authors rose</a> from 5% in 2005 to 9.9% in 2016, with a marked increase in 2013 when the kernel joined Outreachy. Outreachy also encourages women who are students interested in coding projects to apply for Google Summer of Code, and it played a role in increasing participation of women in Google Summer of Code from <a href="https://opensource.googleblog.com/2012/05/google-summer-of-code-2012-by-numbers.html">7.1%</a> in 2011 to <a href="https://opensource.googleblog.com/2018/06/google-summer-of-code-2018-statistics-part-2.html">11.6%</a> in 2018.</p>
-
-<p>The <a href="http://graphics.wsj.com/diversity-in-tech-companies/">diversity data for the U.S.</a> released by many tech companies shows that many of them only have 1-3% Black and 2-4% Hispanic employees in technical roles, while the population of the U.S. is 13% Black and 17% Hispanic. We don't have any data like this for free software participation, but we can tell there is a lack of racial and ethnic diversity at conferences we attend. Addionally, we are aware of bias and discrimination against other groups not connected to race or gender.</p>
-
-<p>It's important that we reach more people with the information that the FOSS community is (by and large) mature and friendly, and that contributing to FOSS is valuable for both social and professional reasons. In this way, we are growing the community and improving our ability to reach even more people.</p>
-
-<p>We know from the <a href="http://opensourcesurvey.org/2017/">2017 GitHub survey</a> that "women are also more likely than men to seek out help directly (29% vs 13%) from people they already know well (22% vs 6%), rather than ask for help from strangers in a public forum or channel." It can be intimidating to submit contributions and get feedback on public forums. Outreachy provides a gentle introduction to FOSS by providing mentors who can guide applicants through making their first public contributions during the application period. Then selected interns work remotely with the same mentor during the three month internship.</p>
-
-<p>By participating in the program, applicants and interns develop a good understanding of the power of FOSS and skills necessary to continue contributing to it. Outreachy provides a collaborative environment in which newcomers from underrepresented backgrounds can get help working on their first contributions and a focused opportunity for them to dedicate a full-time effort to learning and contributing to FOSS.</p>
 
 <h2 id="why-sponsor-outreachy">Why Sponsor Outreachy?</h2>
 
-<p>Sponsoring Outreachy directly supports diversity in open source!</p>
+<p>Sponsoring Outreachy directly supports diversity in open source, enabling anyone from any background who has experienced systemic bias and discrimination to apply!</p>
 
 <p>Based on our 2019 longitudinal survey, past Outreachy interns are:</p>
 <ul>
@@ -177,14 +166,11 @@ with the organization they worked with past their internship. Outreachy organize
 
 <p>The outreach efforts like this one also result in the improvements for all newcomers.
 For example, the <a href="https://wiki.gnome.org/Newcomers/Mentors">mentors list</a>
- that GNOME started with 9 mentors for the first round of the Outreach 
-Program for Women is now a general resource that contains over 40 
-mentors. GNOME also improved how it engages Google Summer of Code 
-students with the community based on its Outreach Program for Women 
-experience, by requiring them to work with mentors on an initial 
+ that GNOME started with 9 mentors is now a general resource that contains over 40 
+mentors. GNOME also improved how it engages Google Summer of Code students with the community based on its experience in the program, by requiring them to work with mentors on an initial 
 contribution during the application period and by incorporating the 
 required blog posts about their work on Planet GNOME. Making the 
-community a friendly place for underrepresented people also makes it 
+community a friendly place for people who experience bias and discrimination also makes it 
 such for all newcomers.</p>
 
 <h2>Frequently Asked Questions (FAQ)</h2>
@@ -238,18 +224,8 @@ opportunity requires people to be in a particular location, please
 include the location in the subject line.
 </p>
 		
-<p><b>Q: Did Outreachy used to be called something else?</b></p>
+<p><b>Q: Who is eligible for Outreachy internships?</b></p>
 
-<p>A: Yes. Outreachy was started in 2010 by the GNOME Project as the Outreach Program for Women (OPW). The name was changed in 2015 when the program was moved to Software Freedom Conservancy with a vision to include more people who experience the impact of bias and discrimination in tech. In 2006, the GNOME Project ran a one-time Women's Summer Outreach Program, which was the predecessor of OPW.</p>
-
-<p><b>Q: Are you still associated with GNOME?</b></p>
-
-<p>A: Outreachy is no longer run by GNOME, but GNOME still participates as an Outreachy mentoring community.</p>
-
-<p>GNOME has been an Outreachy mentoring community throughout the
-Outreachy's history. After Outreachy moved under our current non-profit home, Software Freedom Conservancy, GNOME continued to host 
-some Outreachy resources, including our website, wiki, application 
-system, and IRC channel. Outreachy has since migrated its resources to be independently hosted. We thank GNOME for their past support of the program!
-</p>
+<p>Anyone from any background who has experienced systemic bias and discrimination is eligible to apply to Outreachy. There is no list of groups that are eligible or ineligible and Outreachy interns have been from countless backgrounds and identities. Obstacles that face people who wish to get started in FOSS can be significant. Our program does not presume what those obstacles may be, and instead we rely on applicants to tell us about the obstacles they face and how those obstacles impact them. We recognize that our technology will not be made <i>for</i> everyone if it is not made <i>by</i> everyone.</p>
 
 {% endblock %}
