--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -11,7 +11,7 @@ Sponsor Outreachy
 
 <p>Outreachy is supported by our generous donors!
 
-<p>Outreachy is a diversity initiative of the 501(c)(3) non-profit Software Freedom Conservancy. Donations are tax deductible to the extent permitted by law..</p>
+<p>Outreachy is a diversity initiative of the 501(c)(3) non-profit Software Freedom Conservancy. Donations are tax deductible to the extent permitted by law.</p>
 
 <div class="container">
 	<div class="row align-items-center justify-content-center">
