Other adjustments to statement

--- a/home/templates/home/snippet/diversity_statement.html
+++ b/home/templates/home/snippet/diversity_statement.html
@@ -19,11 +19,11 @@
 	<div class="row">
 		<div class="col">
 			<p>
-			Outreachy openly invites applicants who are women (both cis and trans), trans men, non-binary people, and genderqueer people to apply.
+			Outreachy openly welcomes applicants who are women (both cis and trans), trans men, non-binary people, and genderqueer people to apply.
 			</p>
 
 			<p>
-			We also openly invite applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander.
+			We also openly welcome applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander.
 			</p>
 
 			<p>
