--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -165,34 +165,14 @@ Internship Guide | Outreachy Documentation
 
 <ol>
 	<li>Introduce yourself.</li>
-	<li>Pick 1-3 <a href="https://jamesclear.com/core-values">core values</a>, and talk about why they are important to you.</li>
-	<li>Tell people what motivated you to apply to Outreachy.</li>
+	<li>Tell people what motivated you to apply to Outreachy and what kept you going during all application stages.</li>
+	<li>Describe your experience during the contribution period and everything you've learned during that stage.</li>
+	<li>List your proudest contributions.</li>
+	<li>Talk about what you expect from your internship experience.</li>
+
 </ol>
 
 <p>See the <a href="#blog-length">blog faq</a> for suggested blog post length.</p>
-
-<p><b>Core values</b></p>
-
-<p>Core values are important personality traits. Core values motivate you when you make decisions. Here's a <a href="https://jamesclear.com/core-values">list of some core values</a>.</p>
-
-<p>For example, if the Outreachy organizer Sage Sharp were to talk about their core values, they would say:</p>
-
-<div class="card p-2 m-4">
-	<div class="card-body">
-		<p class="card-text">"My core values are curiosity, growth, and compassion.</p>
-
-		<p class="card-text">I value curiosity. I always want to know how something works. I'm also curious about why things are built a particular way.</p>
-
-		<p class="card-text">Once I understand the how and why, I want to optimize and improve it. That's why I value growth. I want to be a better person. I want to help the world be a better place.</p>
-
-		<p class="card-text">I also value compassion. I want to support and understand people. I'm always curious about other people's lived experiences."</p>
-
-	</div>
-</div>
-
-<p>Your values may be very different from Sage's. Maybe you're ambitious, you want to be a leader, and you want to influence others. Or maybe you value security, loyalty, and stability. That's great! You should write about the core values that resonate with you.</p>
-
-<p>Pick 1 to 3 <a href="https://jamesclear.com/core-values">core values</a>. Talk about why they are important to you.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
