Updates feedback cycle counts to four & consistent naming for feedback cycles

--- a/home/templates/home/feedback2fromintern_form.html
+++ b/home/templates/home/feedback2fromintern_form.html
@@ -7,7 +7,7 @@ Midpoint internship feedback
 {% block content %}
 <h1>Feedback on Your Internship</h1>
 
-<p>Outreachy organizers collect feedback from interns three times during the Outreachy internship. Please give yourself at least 5 to 15 minutes to complete this form.</p>
+<p>Outreachy organizers collect feedback from interns four times during the Outreachy internship. Please give yourself at least 5 to 15 minutes to complete this form.</p>
 
 <h2>Instructions</h2>
 
