--- a/home/templates/home/feedback2frommentor_form.html
+++ b/home/templates/home/feedback2frommentor_form.html
@@ -6,9 +6,9 @@ Midpoint mentor feedback
 {% endblock %}
 
 {% block content %}
-<h1>Midpoint Feedback on {{ feedback2frommentor.intern_selection.applicant.applicant.public_name }}</h1>
+<h1>Feedback #2 on {{ feedback2frommentor.intern_selection.applicant.applicant.public_name }}</h1>
 
-<p>Outreachy organizers collect intern feedback from mentors three times during the Outreachy internship.</p>
+<p>Outreachy organizers collect intern feedback from mentors four times during the Outreachy internship.</p>
 
 <h2>Instructions</h2>
 
