--- a/home/templates/home/feedback4frommentor_form.html
+++ b/home/templates/home/feedback4frommentor_form.html
@@ -129,11 +129,13 @@ Internship feedback #4
 				<p>If you are not requesting an internship extension, please provide a report on the outcome of the internship project. Include:</p>
 				<ul>
 					<li>Summary of the project goals completed</li>
+          				<li>Links to publicly accessible artifacts produced during the internship (e.g., code, documentation, reports)</li>
 					<li>Impact the project will have on the open source community</li>
 					<li>What your intern learned during the internship</li>
 				</ul>
 				<p>If you are requesting an internship extension, please provide the following information:</p>
 				<ul>
+          				<li>The reason for the extension request</li>
 					<li>Your intern's communication frequency with you</li>
 					<li>Your intern's progress on their project</li>
 					<li>Information about the intern's interactions with your open source community</li>
