Publish Dec 2025 mentor CFP blog post
Blog post announcing the Dec 2025 cohort is open to mentoring
organizations to join. Post text was created by Sage, then edited and
approved by Karen.

New things this cohort:
 - no Outreachy funding for internships
 - generative AI policy field for internship project descriptions
 - an explicit statement that generative AI is not allowed in initial
   applications
 - no more blog posts, just project reports
 - no more intern text chats, just three video social hours

--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,27 +1,22 @@
 {% load humanize %}
-<p>We encourage any open source community to apply to mentor Outreachy interns.</p>
 
-<p>Outreachy does not require your community to provide internship funding. However, <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/#funding-loss">donations to Outreachy have decreased over the last few years</a>, and we currently have a very limited budget to fund internships each cohort.</p>
+<p>As everyone is aware, <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/#funding-loss">donations to Outreachy have decreased over the last few years</a>. Because of this, <b>Outreachy is not currently able to fund any internships out of our general activities fund.</b></p>
 
-<p>We often find that FOSS communities know best what organizations or companies might have funding available. Therefore, we need your help finding additional <a href="https://www.outreachy.org/sponsor/">Outreachy sponsors</a>.</p>
-
-<p>We cannot assure funding for your interns, but we will try.  Your help identifying fundraising leads will be a major factor in the success of this Outreachy internship cohort.</p>
+<p><a href="https://www.outreachy.org/blog/2025-08-14/december-2025-call-for-mentoring-organizations/#critical-financial-challenges">Outreachy's finances are at a critical point.</a> We would be so grateful if all of our communities help us identify fundraising leads so that Outreachy can continue to run.</p>
 
 <p><u>Donation amounts</u></p>
-<p>In order to sustain our program, Outreachy needs to receive donations of at least <b>${{ current_round.sponsorship_per_intern|intcomma }} to $10,000 USD per intern</b> we accept. This breaks down to:</p>
+
+<p>In order to run our program in the most basic way, Outreachy needs to receive donations of at least $8,000 to $10,000 USD per intern we accept. This breaks down to:</p>
+
 <ul>
 	<li>$7,000 USD donation towards the Outreachy internship stipend</li>
-	<li>$1,000 to $3,000 USD donation towards the Outreachy program activities fund, which covers some of the basic costs of running the Outreachy program, and without which we couldn't run the internship program at all.</li>
+	<li>$1,000 to $3,000 USD donation towards the Outreachy program activities fund, which covers some of the basic costs of running the Outreachy program, including all banking and other fees, and without which we couldn't run the internship program at all.</li>
 </ul>
 
-<p><u>Donations to the Outreachy program are vital to support interns</u></p>
+<p><b>Outreachy is currently facing critical financial challenges. At this time, communities must donate at least $8,000 USD per intern they wish to mentor. We really hope communities increase their donation beyond that to ensure Outreachy can continue running.</b></p>
 
-<p>Outreachy is a labor intensive program. Outreachy organizers are highly involved with interns. Outreachy organizers work closely with your community's mentors to empower your interns to pursue a future in FOSS. The Outreachy organizers share tips for your interns on how to attend FOSS conferences, encourage your interns to explore careers or academic research in open source, and help them expand their network of open source contracts.</p>
+<p>Outreachy is a labor intensive program. Outreachy organizers are highly involved with interns. Outreachy organizers work closely with your community's mentors to empower your interns to pursue a future in FOSS. While most of our internships complete without issues, each cohort there are multiple internships where the organizers step in provide support to both interns and mentors. They also are almost always available via Zulip to both interns and mentors.</p>
 
-<p>Outreachy's deep support of interns, along with your mentoring partnership, means <b>80% of past Outreachy interns continue to contribute to open source after their internship.</b></p>
+<p>Outreachy's deep support of interns, along with your mentoring partnership, means 80% of past Outreachy interns continue to contribute to open source after their internship.</p>
 
-<p>Outreachy organizers' deep support of interns would not be possible without funding for Outreachy's core program activities. We highly encourage organizations to donate additional funds to Outreachy program activities because <b>additional donations helps us retain Outreachy interns in the open source community.</b></p>
-
-<p><u>We need fundraising collaboration with FOSS communities</u></p>
-
-<p>We need your community's help to identify and convince organizations to provide donations to help Outreachy sustain our deep support of interns, and retain their amazing talent in our open source community.  Please don't think about this as just finding funding for your interns for this internship cohort. This is about sustaining our program, and we ask for your help with promotion and fundraising leads.</p>
+<p>We need your community's help to identify and convince organizations to provide donations to help Outreachy sustain our deep support of interns, and retain their amazing talent in our open source community. Please don't think about this as just finding funding for your interns for this internship cohort. This is about <b>ensuring the future of Outreachy</b>, and we ask for your help <b>to fund our essential program activities.</b></p>
